# Robotellin

./: README.md
function/: package.xml  setup.cfg  setup.py
function/function/: conexion.py
my_moveit2_py/: package.xml  setup.cfg  setup.py
my_moveit2_py/my_moveit2_py/: Moveit2_resources.py  ur3e_model.py
my_robot_bringup_ms/: CMakeLists.txt  package.xml
my_robot_bringup_ms/config/: argsforlaunching.yaml  param_bringup.yaml
my_robot_bringup_ms/launch/: control_robot.py
my_robot_bringup_ms/launch/launch_descripition_resources/: resources_forlaunching
